src_old/objects/JobAttemptWorkerTimeEntry__c.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (in minutes)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsBillable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobAttemptWorker__c</fullName>
        <label>Job Attempt Worker</label>
        <referenceTo>JobAttemptWorker__c</referenceTo>
        <relationshipLabel>Job Attempt Worker Time Entries</relationshipLabel>
        <relationshipName>Job_Attempt_Worker_Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>This custom field will be populated with standard Last Modified Date value. Created this field for Indexing purposes</description>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TeamLeadUserId__c</fullName>
        <formula>JobAttemptWorker__r.JobAttempt__r.TeamLeadUserId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Lead User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeEntryType__c</fullName>
        <label>Time Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check In</fullName>
                </value>
                <value>
                    <fullName>Check out</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Break</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Attempt Worker Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JAWTE-{000000000}</displayFormat>
        <label>Job Attempt Worker Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Attempt Worker Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>